scripts/nullaway/nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8.txt
../nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/StdIn.java:324: warning: [dep-ann] deprecated item is not annotated with @Deprecated
    public static int[] readInts() {
                        ^
../nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/StdIn.java:335: warning: [dep-ann] deprecated item is not annotated with @Deprecated
    public static double[] readDoubles() {
                           ^
../nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/StdIn.java:344: warning: [dep-ann] deprecated item is not annotated with @Deprecated
    public static String[] readStrings() {
                           ^
../nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/tests/Test.java:49: error: [NullAway] initializer method does not guarantee @NonNull fields I (line 15), Q (line 17), Y (line 19), inventory (line 21), invcapacity (line 23), production (line 25), productionRel (line 27), D (line 31), inInv (line 33), N (line 37), M (line 39), R (line 41), V (line 47) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Test() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/model/QBnBVariable.java:34: error: [NullAway] read of @NonNull field name before initialization
        this.name = name;
                    ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/model/QBnBconstr.java:58: error: [NullAway] initializer method does not guarantee @NonNull field model (line 48) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public QBnBconstr(QBnBLinExp le, int type, double rs, String name, Model model) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/model/Model.java:121: error: [NullAway] initializer method does not guarantee @NonNull fields U (line 24), L (line 29), id (line 34), A (line 43), c (line 48), b (line 53), x (line 60), type (line 78), I (line 83), ofle (line 104), simplex (line 114) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Model() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/model/Model.java:272: error: [NullAway] dereferenced expression v is @Nullable
        v.setLb(nlb);
         ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/model/Model.java:277: error: [NullAway] dereferenced expression v is @Nullable
        v.setUb(nub);
         ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/model/Model.java:362: error: [NullAway] passing @Nullable parameter 'findVarByName(vars[i])' where @NonNull is required
            le.addTerm(coeff[i], findVarByName(vars[i]));
                                              ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/model/Model.java:534: error: [NullAway] assigning @Nullable expression to @NonNull field
        A = null;
          ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/model/Model.java:539: error: [NullAway] passing @Nullable parameter 'var' where @NonNull is required
            le.addTerm(1, var);
                          ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/model/Model.java:547: error: [NullAway] passing @Nullable parameter 'var' where @NonNull is required
            le.addTerm(1, var);
                          ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/SimplexAlgorithm.java:163: error: [NullAway] initializer method does not guarantee @NonNull fields B (line 33), N (line 38), xb (line 43), xn (line 48), rq (line 101) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public SimplexAlgorithm(double[][] A, double[] b, double[] c, String[] I, double[] U, double[] L, boolean print) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/SimplexAlgorithm.java:188: error: [NullAway] initializer method does not guarantee @NonNull fields B (line 33), N (line 38), xb (line 43), xn (line 48), rq (line 101), cb (line 53), cn (line 58), b (line 63), In (line 68), Ib (line 73), c (line 78), A (line 91), dual (line 96), Ub (line 106), Lb (line 111), Un (line 116), Ln (line 121), U (line 126), L (line 131), I (line 155) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public SimplexAlgorithm() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/knapSavings/KnapSavings.java:27: error: [NullAway] initializer method does not guarantee @NonNull fields W (line 13), delta (line 17) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public KnapSavings() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/knapSavings/KnapSavings.java:39: error: [NullAway] read of @NonNull field P before initialization
        x = new int[P.length];
                    ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/SimplexEJML.java:31: error: [NullAway] initializer method does not guarantee @NonNull fields B (line 7), N (line 9), xb (line 11), xn (line 13), cb (line 15), cn (line 17), b (line 19), In (line 21), Ib (line 23), c (line 25), A (line 29) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public SimplexEJML() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/StdOut.java:36: error: [NullAway] @NonNull static field out not initialized
    private static PrintWriter out;
                               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/Queue.java:62: error: [NullAway] initializer method does not guarantee @NonNull field last (line 49) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Queue() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/Queue.java:54: error: [NullAway] @NonNull field Queue$Node.item not initialized
        private Item item;
                     ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/Queue.java:56: error: [NullAway] @NonNull field Queue$Node.next not initialized
        private Node<Item> next;
                           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/Queue.java:64: error: [NullAway] assigning @Nullable expression to @NonNull field
        last = null;
             ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/Queue.java:92: error: [NullAway] dereferenced expression first is @Nullable
        return first.item;
                    ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/Queue.java:103: error: [NullAway] assigning @Nullable expression to @NonNull field
        last.next = null;
                  ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/Queue.java:119: error: [NullAway] dereferenced expression first is @Nullable
        Item item = first.item;
                         ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/Queue.java:124: error: [NullAway] assigning @Nullable expression to @NonNull field
            last = null;
                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/Queue.java:143: error: [NullAway] passing @Nullable parameter 'first' where @NonNull is required
        return new ListIterator<Item>(first);
                                      ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/Queue.java:167: error: [NullAway] dereferenced expression current is @Nullable
            Item item = current.item;
                               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/BnB.java:39: error: [NullAway] initializer method does not guarantee @NonNull field priorityQueue (line 21) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public BnB(Model initial, QBnBEnv e) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/StdIn.java:58: error: [NullAway] @NonNull static field scanner not initialized
    private static Scanner scanner;
                           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/StdIn.java:131: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return line;
        ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
29 errors
3 warnings
